--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <header class="header">
           <a class="header--logo" href="#0">
             <img src="assets/img/logo.png" alt="Global">
-            <p>Executive Co Ordinator Recruitment</p>
+            <p>Execruitment</p>
           </a>
       
           <div class="header--nav-toggle">
