--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Executive Co Ordinator Recruitment</title>
+  <title>Execruitment</title>
   <link rel="shortcut icon" href="./favicon.ico" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content=" Executive Co Ordinator Recruitment of The Initiatives Foundation">
-  <meta name="keywords" content="ECO ,ignite, initiative">
+  <meta name="keywords" content="ECO ,ignite, initiative, Execruitment, executive co ordinator recruitment, The initiatives foundation">
   <meta name="author" content="The Initiatives Foundation">
   <link rel="stylesheet" href="assets/css/main.css">
 </head>
