--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <div class="hire">
               <h2>Class Category</h2>
               <!-- checkout formspree.io for easy form setup -->
-              <form class="work-request"  action="https://forms.gle/Gx8fXzv9UiuXKozY8">
+              <form class="work-request"  action="https://docs.google.com/forms/d/e/1FAIpQLSeTwG0h7FyfcFXEi3WhbeRxT75ku2fE8TJ8SGgL7TqGCu_3QA/viewform?usp=sf_link">
                 <div class="work-request--options">
                   <span class="options-a">
                     <input id="opt-1" type="checkbox" value="JSC">
